2004-11-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * Bugs fix for the Windows build with VC6
  * CMakeLists.txt : bug fix - The include of the VTK lib is made only when it's
    needed (only for projects required VTK). If the VTK is included in all
    projects, there is conflicts with the jpeg lib of vtk when compiling the
    gdcmjpeg[8,12,16] projects. The first conflict is on the jmorecfg.h file.
  * src/gdcmUtil.h : export binary_write methods. Otherwise, there's problems
    when compiling the gdcm_wrap.cxx file (created by the compilation of the
    gdcm.i file)
  * vtk/vtkGdcmDemo.cxx : remove the use of std namespace for the cerr use
    (like it's already made for the cout use). Otherwise, conflict with the
    std::cerr of vtk.

2004-11-09 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDicomDit.h the Method typedef is now local to DicomDir class.
  * gdcmPython/gdcm.i:
    - comments on the DicomDir::Method related usage added.
    - now that we use the namespace gdcm, a lot of internal classes do
      NOT need to be wrapped anymore.
  * gdcmPython/demo/DicomDirProgressMethod.py (that uses the above
    DicomDir::Method) new example added.

2004-11-05 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Improve string manipulation. I now inforce the notion of 'DicomString'
    A DicomString can contain as many \0 as they want
    and it is *always* of even length.
    We only support odd length for very rare case. 
    And in the near future this should be removed.

2004-11-03 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * /binary_write/ gdcm source. Now even on big endian we are writting
    little endian. This should -heopfully- fix some tests

2004-11-03 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Now the dictionary is compiled into gdcm lib. This is a default 
    behavior, thus any dic file specified is picked before failback to 
    the one comiled into lib
